src/test/resources/scripts/language/parser/valid/list/listNum.sbsc
// declare a list of muns
let {
  a = [1.0, 2.0, 3.0]
} in true